--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,8 +1,9 @@
 name: Python application Special
-on: [push]
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    working-directory: ./dictdir
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
@@ -13,9 +14,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-      working-directory: ./dictdir 
     - name: Test with pytest
       run: |
         pip install pytest
         pytest dictdir
-      working-directory: ./dictdir
