--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -3,7 +3,8 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    working-directory: ./dictdir
+    env:
+      working-directory: ./dictdir
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
@@ -13,8 +14,23 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt
+      working-directory: ${{ env.working-directory }}
     - name: Test with pytest
       run: |
-        pip install pytest
+        python -m pip install -r requirements-dev.txt
         pytest dictdir
+      working-directory: ${{ env.working-directory }}
+
+    - name: Create Exe
+      run: |
+        python -m pip install pyinstaller
+        python ../ppyinst.py dictfold.py -F
+      working-directory: ${{ env.working-directory }}/dictdir
+
+    - name: Create Package
+      run: |
+        setup.py sdist --formats=gztar,zip
+        python setup.py sdist --formats=gztar,zip
+      working-directory: ${{ env.working-directory }}
+
