--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,15 +23,16 @@ jobs:
       working-directory: ${{ env.working-directory }}
 
     - name: Create Exe
+#        mv ../dist ../dist_exe
       run: |
         python -m pip install pyinstaller
         python ../ppyinst.py dictfold.py -F
-        mv ../dist ../dist_exe
+        ls -alh dist
       working-directory: ${{ env.working-directory }}/dictdir
 
     - name: Create Package
       run: |
         python setup.py sdist --formats=gztar,zip
-        mv ../dist ../dist_package
+        ls -alh dist
       working-directory: ${{ env.working-directory }}
 
