--- a/_repos/pg-clients/_git_upstream.yaml
+++ b/_repos/pg-clients/_git_upstream.yaml
@@ -4,6 +4,6 @@ org_ref:
   Author: Jonathan Striebel <jstriebel@users.noreply.github.com>
   Date:   Tue Oct 30 10:03:13 2018 +0100
   desc: Overview of web-based, dockerized PostgreSQL clients
-  branch: master
-  copied_date: 2020-03-13T23-05-17
+  latest: master
+  copied: 2020-03-13T23-05-17
 
