--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ coverage_html_report
 build_info
 cov.log
 dbtry
+*.pyc
+*.tmp
+temp
+venv
+.ipynb_checkpoints
+.vscode
+.idea
+
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
