--- a/_infra/tools/jenkins/docker-compose-jenkins.yml
+++ b/_infra/tools/jenkins/docker-compose-jenkins.yml
@@ -9,7 +9,7 @@ services:
         image: 'jenkins/jenkins:lts'
         # restart: always
         environment:
-            - JAVA_OPTS=-Dhudson.footerURL=http://mycompany.com
+            - JAVA_OPTS=-Dhudson.footerURL=http://cicd-jen.jen_master
         volumes:
             - jenkins_home:/var/jenkins_home
             - /var/run/docker.sock:/var/run/docker.sock
