new piplene for jentask

--- a/_infra/stacks/Taskfile_stack.yml
+++ b/_infra/stacks/Taskfile_stack.yml
@@ -16,3 +16,8 @@ tasks:
     desc: run mongo db docker
     cmds:
       - docker stack deploy -c stack-mongo.yml mongo
+
+  run-cicd:
+    desc: run mongo db docker
+    cmds:
+      - docker stack deploy -c stack-cicd.yml cicd
