--- a/libs/dictmodel/.devcontainer/devcontainer.json
+++ b/libs/dictmodel/.devcontainer/devcontainer.json
@@ -5,13 +5,15 @@
 	"build": {
 		"dockerfile": "../cicd/dev.Dockerfile",
 		"context": "..",
-		// Update 'VARIANT' to pick a Python version. Rebuild the container 
-		// if it already exists to update. Available variants: 3, 3.6, 3.7, 3.8 
+		// Update 'VARIANT' to pick a Python version. Rebuild the container
+		// if it already exists to update. Available variants: 3, 3.6, 3.7, 3.8
 		// "args": { "VARIANT": "3" }
 	},
-
+	"mounts": [
+		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+	],
 	// Set *default* container specific settings.json values on container create.
-	"settings": { 
+	"settings": {
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"python.pythonPath": "/usr/local/bin/python",
 		"python.linting.enabled": true,
