--- a/apps/park/Taskfile.yml
+++ b/apps/park/Taskfile.yml
@@ -37,7 +37,7 @@ tasks:
             $(conda env list | grep {{.VENV_NAME}} " \
         || conda create -n {{.VENV_NAME}} --python=3.7
       # create short alias for safe command
-  venv:create: * ref_venv_create
+  venv:create: *ref_venv_create-safe
 
   venv:install:
     desc: install conda packages
